// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`component > Text overflow behavior > displays ellipsis with options 1`] = `
<div>
  <div
    class="container"
    data-test-id="input-label"
  >
    <label
      class="n8n-input-label inputLabel heading medium"
    >
      <div
        class="title"
      >
        <span
          class="n8n-text size-medium bold textEllipses textEllipses"
        >
          
          a label 
          <!--v-if-->
          
        </span>
      </div>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </label>
    
    
  </div>
</div>
`;

exports[`component > Text overflow behavior > displays full text without options 1`] = `
<div>
  <div
    class="container"
    data-test-id="input-label"
  >
    <label
      class="n8n-input-label inputLabel heading medium"
    >
      <div
        class="title"
      >
        <span
          class="n8n-text size-medium bold"
        >
          
          a label 
          <!--v-if-->
          
        </span>
      </div>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </label>
    
    
  </div>
</div>
`;
